<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.smartregister</groupId>
    <artifactId>opensrp-gateway-plugin</artifactId>
    <version>3.0.4</version>
  </parent>

  <artifactId>plugins</artifactId>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.basedir>${project.basedir}</project.basedir>
    <hapifhir.version>7.4.3</hapifhir.version>
    <fhir.proxy-plugin.version>0.2.0</fhir.proxy-plugin.version>
    <sentry.version>7.15.0</sentry.version>
    <jakarta-servlet.version>6.0.0</jakarta-servlet.version>
    <fhir.commons.utils>1.0.3-SNAPSHOT</fhir.commons.utils>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.google.fhir.gateway</groupId>
      <artifactId>server</artifactId>
      <version>${fhir.gateway.version}</version>
    </dependency>
    <dependency>
      <groupId>com.google.fhir.gateway</groupId>
      <artifactId>plugins</artifactId>
      <version>${fhir.gateway.version}</version>
    </dependency>
    <!-- Needed for JEE/Servlet support -->
    <dependency>
      <groupId>jakarta.servlet</groupId>
      <artifactId>jakarta.servlet-api</artifactId>
      <version>${jakarta-servlet.version}</version>
    </dependency>
    <dependency>
      <groupId>ca.uhn.hapi.fhir</groupId>
      <artifactId>hapi-fhir-client</artifactId>
      <version>${hapifhir_version}</version>
    </dependency>
    <dependency>
      <groupId>org.smartregister</groupId>
      <artifactId>fhir-common-utils</artifactId>
      <version>${fhir.commons.utils}</version>
      <scope>compile</scope>
    </dependency>
    <dependency>
      <groupId>io.sentry</groupId>
      <artifactId>sentry-logback</artifactId>
      <version>${sentry.version}</version>
    </dependency>
    <dependency>
      <groupId>io.sentry</groupId>
      <artifactId>sentry-spring-boot-starter-jakarta</artifactId>
      <version>${sentry.version}</version>
    </dependency>
  </dependencies>

</project>
